[package]
name = "roo_engine"
version = "0.1.0"
edition = "2021"
authors = ["Marco Campana <m.campana@gmail.com>"]
license = "MIT"
description = "Roo is a smart bookmarking and productivity tool that works as a custom search engine for your browser"
repository = "https://github.com/marcocampana/roo_engine"
readme = "README.md"
keywords = ["cli", "search", "productivity", "bookmarking"]

[package.metadata.files]
"rules.toml" = ["rules.toml"]

[dependencies]
toml = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.2", features = ["cargo"] }
regex = "1"
rocket = "0.5.0-rc.2"